--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="styles.css">
-<script src="functions.js:></script>
+<script src="functions.js"></script>
 <body style="background-color:aqua;">
 <center>
 <h1>Butterfly Books</h1>
